# insurance-zit-dglm

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: benchmark_zit_dglm.py  zit_dglm_demo.py
src/insurance_zit_dglm/: __init__.py  calibration.py  em.py  losses.py  model.py  power.py
tests/: conftest.py  test_calibration.py  test_em.py  test_losses.py  test_model.py  test_power.py  test_report.py
